--- a/Klapp_Angular/src/app/principal/principal.component.html
+++ b/Klapp_Angular/src/app/principal/principal.component.html
@@ -1,8 +1,11 @@
 <div class="background-container">
-    
+   
+    <div class="logo-container">
+        <img src="/assets/images/Logotipo.png" alt="">
+    </div>
 
     <div class="estudante-container">
-        <img src="/assets/images/estudante1.png" alt="" class="studant-image">
+        <img src="/assets/images/estudante1.png" alt="">
     </div>
     <app-login></app-login>
   </div>
