--- a/Klapp_Angular/src/app/login/login.component.scss
+++ b/Klapp_Angular/src/app/login/login.component.scss
@@ -1,36 +1,48 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 form {
     max-width: 400px;
-    margin-top: 255px;
     margin-left: 880px;
-    padding: 20px;
-   
-   
-   
-    
+    padding-top: 160px;
+
 }
 
-h2 {
+h1 {
     text-align: center;
+    font-family: "Poppins", sans-serif;
+    font-weight: medium;
+    font-size: 36px;
+    color: #fff;
+    padding-bottom: 50px;
 }
+
+
 
 form div {
     margin-bottom: 15px;
+
 }
 
-label {
-    display: block;
-    margin-bottom: 5px;
-}
-
-input {
-    width: 100%;
+input[type="text"],
+input[type="password"] {
+    width: 440px;
+    height: 60px;
     padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+    border-radius: 8px;
+   }
+
+input[type="text"]::placeholder,
+input[type="password"]::placeholder {
+    padding-left: 5px;
+    color: #939598;
+    font-size: 16px;
+    font-family: "Poppins", sans-serif;
 }
+
 
 button {
     width: 100%;
+    margin-top: 95px;
     padding: 10px;
     background-color: #007bff;
     color: white;
