--- a/Klapp_Angular/src/app/principal/principal.component.scss
+++ b/Klapp_Angular/src/app/principal/principal.component.scss
@@ -1,23 +1,25 @@
 .background-container {
     background-image: url('/assets/images/background1.png');
     background-size: cover;
-    background-position: center;
-    background-repeat: repeat;
-    height: 129vh;
+    background-position: bottom; /* Alinha o fundo com o fundo da tela */
+    background-repeat: no-repeat; /* Não repetir a imagem */
+    background-attachment: fixed; /* Mantém a imagem fixa na tela */
+    height: 100vh;
     width: 100%;
-    position: relative; /* Define o contêiner como referência para o pos. absoluto */
+    position: relative;
 }
 
 .estudante-container {
     position: absolute; /* Para posicionar em relação ao contêiner pai */
-    margin-top: 168px; /* Ajusta para a posição desejada */
-    margin-left: 120px;
-    margin-right: 728px;
-    margin-bottom: 0;
+    bottom: 0; /* Alinha a imagem da estudante ao fundo da tela */
+    left: 120px; /* Ajusta a posição horizontal */
+    right: 728px;
+    padding-bottom: 0;
 }
 
-.student-image {
-    width: 592px; /* Largura fixa */
-    height: 685px; /* Altura fixa */
-    object-fit: cover; /* Para garantir que a imagem preencha a área, mantendo a proporção */
+.logo-container {
+    width: 250px;
+    height: 92.35px;
+    margin-left: 72px;
+    padding-top: 32px;
 }
