--- a/Klapp_Angular/src/app/principal/principal.component.html
+++ b/Klapp_Angular/src/app/principal/principal.component.html
@@ -5,7 +5,7 @@
     </div>
 
     <div class="estudante-container">
-        <img src="/assets/images/estudante1.png" alt="">
+        <img src="/assets/images/estudante1.png" alt="" class="estudante-imagem">
     </div>
     <app-login></app-login>
   </div>
