--- a/Klapp_Angular/src/app/login/login.component.html
+++ b/Klapp_Angular/src/app/login/login.component.html
@@ -7,10 +7,25 @@
     <input type="password" id="password" name="password" ngModel required placeholder="Senha">
   </div>
 
-<div>
-  <input type="checkbox" id="rememberMe" name="rememberMe" ngModel>
-  <label for="rememberMe">Manter conectado</label>
+  <div>
+    <input type="checkbox" id="rememberMe" name="rememberMe" ngModel>
+    <label for="rememberMe" class="check">Manter conectado</label>
+    <button class="btn-rec-senha">Recuperar senha?</button>
 
-</div>
-  <button type="submit">Entrar</button>
+  </div>
+  <button type="submit" class="btn-entrar">Fazer Login</button>
+  <div class="container-traco">
+    <span class="text">Ou continue com</span>
+  </div>
+
+  <div class="redes-sociais">
+    <button class="google"><img src="/assets/images/Google.png" alt="" class="img-sociais"></button>
+    <button class="apple"><img src="/assets/images/Apple.png" alt="" class="img-sociais"></button>
+    <button class="facebook"><img src="/assets/images/FACEBOOK.png" alt="" class="img-sociais"></button>
+  </div>
+
+  <div class="container-cadastrar">
+    <span class="text">Não tem conta?</span>
+    <button class="btn-cadastrar">Crie uma conta agora</button>
+  </div>
 </form>
