--- a/Klapp_Angular/src/app/login/login.component.scss
+++ b/Klapp_Angular/src/app/login/login.component.scss
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 form {
-    max-width: 400px;
+    max-width: 440px;
     margin-left: 880px;
-    padding-top: 160px;
+
 
 }
 
@@ -13,13 +13,36 @@ h1 {
     font-weight: medium;
     font-size: 36px;
     color: #fff;
-    padding-bottom: 50px;
+    padding-bottom: 30px;
 }
 
 
+.container-traco {
+    padding-top: 32px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.container-traco::before,
+.container-traco::after {
+    content: "";
+    flex: 1;
+    border-bottom: 2px solid white;
+    margin: 0 10px;
+}
+
+.text {
+    text-align: center;
+    color: #fff;
+    font-size: 16px;
+    font-family: "Poppins", sans-serif;
+    font-weight: 200;
+}
 
 form div {
-    margin-bottom: 15px;
+    margin-bottom: 20px;
 
 }
 
@@ -29,7 +52,8 @@ input[type="password"] {
     height: 60px;
     padding: 8px;
     border-radius: 8px;
-   }
+    border: none;
+}
 
 input[type="text"]::placeholder,
 input[type="password"]::placeholder {
@@ -37,16 +61,88 @@ input[type="password"]::placeholder {
     color: #939598;
     font-size: 16px;
     font-family: "Poppins", sans-serif;
+    font-weight: 300;
 }
 
 
-button {
-    width: 100%;
-    margin-top: 95px;
+input[type="checkbox"] {
+    width: 20px;
+    height: 11px;
+    border-radius: 8px;
+}
+
+.check {
+    color: #fff;
+    font-size: 16px;
+    font-family: "Poppins", sans-serif;
+    padding-left: 5px;
+    font-weight: 300;
+}
+
+
+.btn-entrar {
+    width: 440px;
+    height: 60px;
+    margin-top: 40px;
     padding: 10px;
-    background-color: #007bff;
-    color: white;
+    background-color: #191D6B;
     border: none;
-    border-radius: 4px;
+    border-radius: 8px;
     cursor: pointer;
+    color: #fff;
+    font-size: 20px;
+    font-weight: medium;
+    font-family: "Poppins", sans-serif;
+}
+
+.btn-rec-senha {
+    background-color: transparent;
+    border: none;
+    color: #fff;
+    font-size: 16px;
+    font-family: "Poppins", sans-serif;
+    padding-left: 115px;
+    font-weight: 300;
+}
+
+.redes-sociais {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+}
+
+.google,
+.apple,
+.facebook {
+    align-items: center;
+    justify-content: center;
+    width: 100px;
+    height: 60px;
+    display: flex;
+    border: none;
+    border-radius: 8px;
+    background-color: #fff;
+}
+
+.img-sociais {
+    align-items: center;
+    width: 25px;
+    height: 25px;
+
+}
+
+.container-cadastrar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.btn-cadastrar {
+    background-color: transparent;
+    border: none;
+    color: #fff;
+    font-size: 16px;
+    font-weight: 400;
+    font-family: "Poppins", sans-serif;
 }
