--- a/Klapp_Angular/src/app/app.component.html
+++ b/Klapp_Angular/src/app/app.component.html
@@ -1,3 +1,5 @@
-
-  <app-principal></app-principal>
-  
+<app-principal></app-principal>
+<app-quem-somos></app-quem-somos>
+<app-educacao-para-todos></app-educacao-para-todos>
+<app-como-funciona></app-como-funciona>
+<app-destaques></app-destaques>
