--- a/Klapp_Angular/src/app/app.component.html
+++ b/Klapp_Angular/src/app/app.component.html
@@ -3,3 +3,6 @@
 <app-educacao-para-todos></app-educacao-para-todos>
 <app-como-funciona></app-como-funciona>
 <app-destaques></app-destaques>
+<app-visao></app-visao>
+<app-avaliacoes></app-avaliacoes>
+<app-fale-conosco></app-fale-conosco>
