--- a/Klapp_Angular/src/app/destaques/destaques.component.scss
+++ b/Klapp_Angular/src/app/destaques/destaques.component.scss
@@ -1,3 +1,10 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+
 .text-image-container {
     padding-top: 106px;
     width: 1201px;
