--- a/Klapp_Angular/src/app/app.component.html
+++ b/Klapp_Angular/src/app/app.component.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css">
+
 <app-principal></app-principal>
 <app-quem-somos></app-quem-somos>
 <app-educacao-para-todos></app-educacao-para-todos>
@@ -6,3 +8,5 @@
 <app-visao></app-visao>
 <app-avaliacoes></app-avaliacoes>
 <app-fale-conosco></app-fale-conosco>
+<app-footer-cinza></app-footer-cinza>
+<app-footer-branco></app-footer-branco>
