--- a/Klapp_Angular/src/app/como-funciona/como-funciona.component.scss
+++ b/Klapp_Angular/src/app/como-funciona/como-funciona.component.scss
@@ -19,8 +19,10 @@
     font-size: 40px;
     font-weight: 500;
     color: #191D6B;
+    margin-bottom: 20px;
 
 }
+
 .text-image-container p {
     width: 618px;
     font-family: "Poppins", sans-serif;
