--- a/Klapp_Angular/src/app/educacao-para-todos/educacao-para-todos.component.scss
+++ b/Klapp_Angular/src/app/educacao-para-todos/educacao-para-todos.component.scss
@@ -15,6 +15,7 @@
     text-align: center;
     color: #191D6B;
     padding-top: 30px;
+    margin-bottom: 55px;
 }
 
 .container-titulo{
@@ -29,6 +30,7 @@
     justify-content: center; 
     align-items: center; 
     gap: 15px;
+    margin-bottom: 50px;
 }
 
 .square {
