--- a/Klapp_Angular/src/app/fale-conosco/fale-conosco.component.scss
+++ b/Klapp_Angular/src/app/fale-conosco/fale-conosco.component.scss
@@ -3,3 +3,69 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+.form-container {
+    width: 660px;
+    height: 488px;
+    margin: 0 auto;
+    margin-top: 50px;
+    border-radius: 8px;
+    
+}
+
+form {
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+h1 {
+    text-align: center;
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
+    font-size: 40px;
+    color: #191D6B;
+    margin-bottom: 30px;
+}
+
+form div {
+    margin-bottom: 5px;
+}
+
+.row {
+    display: flex;
+    gap: 10px;
+}
+
+.col {
+    flex: 1;
+}
+
+input, textarea {
+    width: 100%;
+    padding: 10px;
+    border: 2px solid #191D6B;
+    border-radius: 8px;
+    font-size: 16px;
+    font-family: "Poppins", sans-serif;
+    box-sizing: border-box;
+}
+
+textarea {
+    height: 120px;
+    resize: none;
+}
+
+button {
+    width: 100%;
+    padding: 12px;
+    background-color: #191D6B;
+    color: white;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    font-size: 16px;
+}
