--- a/Klapp_Angular/src/app/login/login.component.scss
+++ b/Klapp_Angular/src/app/login/login.component.scss
@@ -10,8 +10,6 @@
 form {
     max-width: 440px;
     margin-left: 880px;
-
-
 }
 
 h1 {
@@ -143,6 +141,7 @@ input[type="checkbox"] {
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 15px;
 }
 
 .btn-cadastrar {
