--- a/Klapp_Angular/src/app/avaliacoes/avaliacoes.component.html
+++ b/Klapp_Angular/src/app/avaliacoes/avaliacoes.component.html
@@ -2,7 +2,7 @@
     <h1>Avaliações</h1>
     <div class="container-azul">
         <div class="box">
-            <img src="/assets/images/icone-aspas.png" alt="">
+            <img src="/assets/images/icone-aspas.svg" alt="">
             <div class="text">
                 "Klapp Edu transformou o jeito
                 como ensino em minha sala de
@@ -21,7 +21,7 @@
             <ngb-rating [rate]="5"></ngb-rating>
         </div>
         <div class="box">
-            <img src="/assets/images/icone-aspas.png" alt="">
+            <img src="/assets/images/icone-aspas.svg" alt="">
             <div class="text">
                 "Como aluno, sempre tive dificuldade em acompanhar o ritmo da sala de aula. Klapp Edu me
                 deu a flexibilidade e os recursos de que eu precisava para aprender no meu próprio ritmo. É uma mudança
@@ -36,7 +36,7 @@
             <ngb-rating [rate]="5"></ngb-rating>
         </div>
         <div class="box">
-            <img src="/assets/images/icone-aspas.png" alt="">
+            <img src="/assets/images/icone-aspas.svg" alt="">
             <div class="text">
                 "Integrar Klapp Edu em nossa estrutura de treinamento foi uma das decisões mais inteligentes que fizemos
                 este ano. O dashboard analítico nos oferece insights sobre onde precisamos focar nossos esforços de
