--- a/Klapp_Angular/src/app/educacao-para-todos/educacao-para-todos.component.html
+++ b/Klapp_Angular/src/app/educacao-para-todos/educacao-para-todos.component.html
@@ -4,28 +4,28 @@
 
 <div class="container-square">
     <div class="square">
-        <img src="/assets/images/icone-instituicoes1.png" alt="" class="img">
+        <img src="/assets/images/icone-instituicoes1.svg" alt="" class="img">
         <h1>Universidades</h1>
         <p>
             Experiências gamificadas que simplificam o aprendizado universitário e promovem a excelência.
         </p>
     </div>
     <div class="square">
-        <img src="/assets/images/icones-professores1.png" alt="" class="img">
+        <img src="/assets/images/icones-professores1.svg" alt="" class="img">
         <h1>Ensino Infantil e Médio</h1>
         <p>
             Metodologia interativa que facilita o aprendizado em todos os níveis de ensino.
         </p>
     </div>
     <div class="square">
-        <img src="/assets/images/icone-aluno1.png" alt="" class="img">
+        <img src="/assets/images/icone-aluno1.svg" alt="" class="img">
         <h1>Ensino Ténico</h1>
         <p>
             Formação focada no mercado de trabalho com conteúdos práticos e gamificados. 
         </p>
     </div>
     <div class="square">
-        <img src="/assets/images/icone-empresa.png" alt="" class="img">
+        <img src="/assets/images/icone-empresa.svg" alt="" class="img">
         <h1>Escolas de Idiomas</h1>
         <p>Aprenda novos idiomas de forma rápida e divertida com desafios interativos.</p>
     </div>
