--- a/Klapp_Angular/src/app/login/login.component.html
+++ b/Klapp_Angular/src/app/login/login.component.html
@@ -16,9 +16,9 @@
         <span class="text">Ou continue com</span>
     </div>
     <div class="redes-sociais">
-        <button class="google"><img src="/assets/images/Google.png" alt="" class="img-sociais"></button>
-        <button class="apple"><img src="/assets/images/Apple.png" alt="" class="img-sociais"></button>
-        <button class="facebook"><img src="/assets/images/FACEBOOK.png" alt="" class="img-sociais"></button>
+        <button class="google"><img src="/assets/images/Google.svg" alt="" class="img-sociais"></button>
+        <button class="apple"><img src="/assets/images/Apple.svg" alt="" class="img-sociais"></button>
+        <button class="facebook"><img src="/assets/images/FACEBOOK.svg" alt="" class="img-sociais"></button>
     </div>
     <div class="container-cadastrar">
         <span class="text">Não tem conta?</span>
