--- a/Klapp_Angular/src/app/principal/principal.component.scss
+++ b/Klapp_Angular/src/app/principal/principal.component.scss
@@ -5,7 +5,7 @@
 }
 
 .background-container {
-    background-image: url('/assets/images/background1.png');
+    background-image: url('/assets/images/background1.svg');
     background-size: cover;
     background-position: bottom;
     background-repeat: no-repeat;
