--- a/Klapp_Angular/src/app/visao/visao.component.html
+++ b/Klapp_Angular/src/app/visao/visao.component.html
@@ -5,5 +5,5 @@
             conhecimento de qualidade. Nossa missão é nivelar as oportunidades educacionais, permitindo que todos
             alcancem seu potencial máximo.</p>
     </div>
-    <img src="/assets/images/ilustracao-visao1.png" alt="" />
+    <img src="/assets/images/ilustracao-visao1.svg" alt="" />
 </div>
