--- a/Klapp_Angular/src/app/como-funciona/como-funciona.component.html
+++ b/Klapp_Angular/src/app/como-funciona/como-funciona.component.html
@@ -3,5 +3,5 @@
     <h1>Como funciona?</h1>
     <p>A plataforma permite que os alunos acompanhem seu desempenho, recebam notificações dos professores e descubram seu estilo de aprendizado. Com um sistema de ranking, eles podem ver sua posição e a dos 3 melhores da turma. Elementos de jogos, como recompensas e progressão, ajudam a motivá-los a alcançar suas metas e persistir nos estudos.</p>
 </div>
-    <img src="/assets/images/ilustracao-funciona1.png" alt="" />
+    <img src="/assets/images/ilustracao-funciona1.svg" alt="" />
 </div>
