--- a/Klapp_Angular/src/app/principal/principal.component.html
+++ b/Klapp_Angular/src/app/principal/principal.component.html
@@ -1,11 +1,11 @@
 <div class="background-container">
    
     <div class="logo-container">
-        <img src="/assets/images/Logotipo.png" alt="">
+        <img src="/assets/images/Logotipo.svg" alt="">
     </div>
 
     <div class="estudante-container">
-        <img src="/assets/images/estudante1.png" alt="" class="estudante-imagem">
+        <img src="/assets/images/estudante1.svg" alt="" class="estudante-imagem">
     </div>
     <app-login></app-login>
   </div>
