--- a/Klapp_Angular/src/app/quem-somos/quem-somos.component.html
+++ b/Klapp_Angular/src/app/quem-somos/quem-somos.component.html
@@ -1,4 +1,10 @@
-<h1>Quem somos</h1>
-<div class="container-text">
-    <p>A KlappEdu é uma plataforma educacional inovadora que utiliza a gamificação para transformar o processo de aprendizado em uma experiência divertida, desafiadora e eficiente. A plataforma é desenvolvida para ajudar os alunos a superarem suas dificuldades de aprendizado por meio de um sistema de ensino personalizado.</p>
+<div class="container my-5">
+    <h1>Quem somos</h1>
+    <div class="row justify-content-center"> <!-- Adiciona a classe justify-content-center -->
+        <div class="col-12"> <!-- Limita a largura do conteúdo -->
+            <div class="container-text">
+                <p>A KlappEdu é uma plataforma educacional inovadora que utiliza a gamificação para transformar o processo de aprendizado em uma experiência divertida, desafiadora e eficiente. A plataforma é desenvolvida para ajudar os alunos a superarem suas dificuldades de aprendizado por meio de um sistema de ensino personalizado.</p>
+            </div>
+        </div>
+    </div>
 </div>
