--- a/Klapp_Angular/src/app/quem-somos/quem-somos.component.scss
+++ b/Klapp_Angular/src/app/quem-somos/quem-somos.component.scss
@@ -1,7 +1,12 @@
+.container{
+    padding-top: 30px;
+}
 h1 {
     font-family: "Poppins", sans-serif;
     text-align: center;
     color: #191D6B;
+    padding: 0;
+    margin-bottom: 20px;
 }
 
 .container-text {
