--- a/Klapp_Angular/src/app/login/login.component.html
+++ b/Klapp_Angular/src/app/login/login.component.html
@@ -1,27 +1,48 @@
-<form (ngSubmit)="onSubmit(loginForm)" #loginForm="ngForm">
-    <h1>Olá, vamos começar?</h1>
-    <div>
-        <input type="text" id="username" name="username" ngModel required placeholder="Entre com seu e-mail">
+<div class="container-fluid background-container d-flex flex-column">
+    <div class="row w-100 flex-grow-1">
+        <!-- Coluna da Imagem -->
+        <div class="col-lg-5 col-md-7 d-none d-md-flex">
+            <div class="estudante-container">
+                <img src="/assets/images/estudante1.svg" alt="Imagem de um estudante"
+                    class="img-fluid estudante-imagem">
+            </div>
+        </div>
+
+        <div class="col-lg-7 col-md-5 d-flex flex-column align-items-center justify-content-end">
+            <form (ngSubmit)="onSubmit(loginForm)" #loginForm="ngForm" class="w-75">
+                <h1 class="text-center mb-4">Olá, vamos começar?</h1>
+                <div class="form-group">
+                    <input type="text" id="username" name="username" ngModel required placeholder="Entre com seu e-mail"
+                        class="form-control mb-3">
+                </div>
+                <div class="form-group">
+                    <input type="password" id="password" name="password" ngModel required placeholder="Senha"
+                        class="form-control mb-3">
+                </div>
+                <div class="form-group d-flex justify-content-between align-items-center mb-3">
+                    <div class="d-flex align-items-center">
+                        <input type="checkbox" id="rememberMe" name="rememberMe" ngModel class="me-2">
+                        <label for="rememberMe" class="check mb-0">Manter conectado</label>
+                    </div>
+                    <button type="button" class="btn btn-link btn-rec-senha p-0 align-self-start">Recuperar senha?</button>
+                </div>
+                <button type="submit" class="btn btn-primary w-100 mb-3">Fazer Login</button>
+                <div class="container-traco text-center my-4">
+                    <span class="text">Ou continue com</span>
+                </div>
+                <div class="redes-sociais d-flex justify-content-center mb-4">
+                    <button class="btn btn-outline-secondary mx-2"><img src="/assets/images/Google.svg" alt="Google"
+                            class="img-sociais"></button>
+                    <button class="btn btn-outline-secondary mx-2"><img src="/assets/images/Apple.svg" alt="Apple"
+                            class="img-sociais"></button>
+                    <button class="btn btn-outline-secondary mx-2"><img src="/assets/images/FACEBOOK.svg" alt="Facebook"
+                            class="img-sociais"></button>
+                </div>
+                <div class="container-cadastrar text-center">
+                    <span class="text">Não tem conta?</span>
+                    <button type="button" class="btn btn-link btn-cadastrar">Crie uma conta agora</button>
+                </div>
+            </form>
+        </div>
     </div>
-    <div>
-        <input type="password" id="password" name="password" ngModel required placeholder="Senha">
-    </div>
-    <div>
-        <input type="checkbox" id="rememberMe" name="rememberMe" ngModel>
-        <label for="rememberMe" class="check">Manter conectado</label>
-        <button class="btn-rec-senha">Recuperar senha?</button>
-    </div>
-    <button type="submit" class="btn-entrar">Fazer Login</button>
-    <div class="container-traco">
-        <span class="text">Ou continue com</span>
-    </div>
-    <div class="redes-sociais">
-        <button class="google"><img src="/assets/images/Google.svg" alt="" class="img-sociais"></button>
-        <button class="apple"><img src="/assets/images/Apple.svg" alt="" class="img-sociais"></button>
-        <button class="facebook"><img src="/assets/images/FACEBOOK.svg" alt="" class="img-sociais"></button>
-    </div>
-    <div class="container-cadastrar">
-        <span class="text">Não tem conta?</span>
-        <button class="btn-cadastrar">Crie uma conta agora</button>
-    </div>
-</form>
+</div>
