--- a/Klapp_Angular/src/app/principal/principal.component.html
+++ b/Klapp_Angular/src/app/principal/principal.component.html
@@ -1,14 +1,13 @@
-<div class="background-container">
-   
-    <div class="logo-container">
-        <img src="/assets/images/Logotipo.svg" alt="">
+<div class="container-fluid background-container d-flex flex-column align-items-center justify-content-center">
+  
+    <div class="logo-container mb-4">
+      <img src="/assets/images/Logotipo.svg" alt="Logotipo da Klapp Edu" class="img-fluid">
     </div>
-
-    <div class="estudante-container">
-        <img src="/assets/images/estudante1.svg" alt="" class="estudante-imagem">
-    </div>
-    <app-login></app-login>
-  </div>
+    
  
+    <app-login></app-login>
+    
+  </div>
+  
 
   
