--- a/Klapp_Angular/src/app/footer-cinza/footer-cinza.component.scss
+++ b/Klapp_Angular/src/app/footer-cinza/footer-cinza.component.scss
@@ -4,35 +4,28 @@
     box-sizing: border-box;
 }
 
-
 .footer-container {
-    height: 499px;
-    margin-top: 120px;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     padding: 20px 40px;
     background-color: #E6E7E8;
     color: #191D6B;
-    
+    margin-top: 120px;
+    text-align: left;
 }
 
 .footer-column {
     font-family: "Poppins", sans-serif;
     font-size: 18px;
-    margin: 0 130px;
-    margin-top: 80px;
-    flex: 1;
-    margin-right: 20px;
-}
-
-.footer-column:last-child {
-    margin-right: 130px;
+    flex: 1 1 23%; /* Colunas lado a lado com largura fixa */
+    min-width: 250px;
+    margin: 20px 0;
 }
 
 .footer-column h3 {
-    font-family: "Poppins", sans-serif;
     font-size: 26px;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
 }
 
 .footer-column ul {
@@ -45,7 +38,6 @@
 }
 
 .footer-column ul li a {
-    font-family: "Poppins", sans-serif;
     font-size: 18px;
     color: #191D6B;
     text-decoration: none;
@@ -62,47 +54,61 @@
 }
 
 .social-list li {
-   display: inline-block;
-   margin-right: 15px;
-   margin-top: 10px;
-   
-   
+    display: inline-block;
+    margin-right: 15px;
+    margin-top: 10px;
 }
 
 .newsletter {
-    font-family: "Poppins", sans-serif;
     font-size: 16px;
-    margin-top: 10px;
-    
-    
+    margin-top: 20px;
 }
 
 .newsletter-form {
     display: flex;
+    flex-wrap: nowrap;
+    gap: 10px;
     margin-top: 10px;
 }
 
 .newsletter-form input {
-    width: 210px;
-    height: 28px;
+    flex: 1;
     padding: 10px;
     border: none;
-    margin-right: 10px;
-    /* Espaçamento entre o input e o botão */
+    border-radius: 5px;
 }
 
 .newsletter-form button {
-    height: 28px;
-    width: 82px;
-    font-family: "Poppins", sans-serif;
-    font-size: 14px;
+    padding: 10px 20px;
     background-color: #C9C9C9;
     color: #2A256D;
     border: none;
     cursor: pointer;
-    text-align: center; 
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    
+    border-radius: 5px;
+}
+
+/* Responsividade */
+@media (max-width: 768px) {
+    .footer-container {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .footer-column {
+        flex: 1 1 100%;
+        max-width: 100%;
+    }
+
+    .newsletter-form {
+        flex-direction: column;
+    }
+
+    .newsletter-form input {
+        width: 100%;
+        margin-bottom: 10px;
+    }
+
+    .newsletter-form button {
+        width: 100%;
+    }
 }
