--- a/Klapp_Angular/src/app/login/login.component.html
+++ b/Klapp_Angular/src/app/login/login.component.html
@@ -27,7 +27,7 @@
                     </div>
                     <button type="button" class="btn btn-link btn-rec-senha p-0 align-self-start">Recuperar senha?</button>
                 </div>
-                <button type="submit" (click)="onSubmit(loginForm)" class="btn btn-primary w-100 mb-3">Fazer Login</button>
+                <a [routerLink]="'tela-aluno'" class="btn btn-primary w-100 mb-3">Fazer Login</a>
 
 
                 <div class="container-traco text-center my-4">
