--- a/Klapp_Angular/src/app/como-funciona/como-funciona.component.html
+++ b/Klapp_Angular/src/app/como-funciona/como-funciona.component.html
@@ -4,7 +4,7 @@
     <p>A plataforma permite que os alunos acompanhem seu desempenho, recebam notificações dos professores e descubram seu estilo de aprendizado. Com um sistema de ranking, eles podem ver sua posição e a dos 3 melhores da turma. Elementos de jogos, como recompensas e progressão, ajudam a motivá-los a alcançar suas metas e persistir nos estudos.</p>
 </div>
 <div class="container-image">
-    <img src="/assets/images/ilustracao-funciona1.svg" alt="Ilustração de como funciona" />
+    <img src="/assets/images/ilustracao-funciona1.svg" alt="Ilustração de como funciona" class="img-fluid"/>
     </div>
     
 </div>
