--- a/Klapp_Angular/src/app/destaques/destaques.component.html
+++ b/Klapp_Angular/src/app/destaques/destaques.component.html
@@ -1,5 +1,5 @@
 <div class="text-image-container">
-    <img src="/assets/images/ilustracao-destaques1.svg" alt="" />
+    <img src="/assets/images/ilustracao-destaques1.svg" alt="" class="img-fluid"/>
     <div class="container-text">
     <h1>Destaques e Funcionalidades</h1>
     <p>A plataforma personaliza o aprendizado, identificando dificuldades e oferecendo soluções. A gamificação aumenta o engajamento, e o sistema de recompensas motiva os alunos a alcançar metas. Professores enviam feedback instantâneo e acompanham o progresso, enquanto relatórios de aprendizado ajudam os alunos a otimizar suas estratégias.</p>
