--- a/Klapp_Angular/src/app/principal/principal.component.html
+++ b/Klapp_Angular/src/app/principal/principal.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid background-container d-flex flex-column align-items-center justify-content-center">
   
-    <div class="logo-container mb-4">
+    <div class="logo-container mb-4 img-fluid">
       <img src="/assets/images/Logotipo.svg" alt="Logotipo da Klapp Edu" class="img-fluid">
     </div>
     
