--- a/Klapp_Angular/src/app/side-menu/side-menu.component.html
+++ b/Klapp_Angular/src/app/side-menu/side-menu.component.html
@@ -1,24 +1,24 @@
 
-<div class="col align-items-start border border-2 blurred-background " style="margin: 0 0 0 20px; width: 250px; height: 630px; border-radius: 8px;">
+<div class="col align-items-start border border-2 blurred-background " style="margin: 0 0 0 20px; width: 250px; height: 95vh; border-radius: 8px;">
     <img style="max-height: 70px; margin: 20px 20px 50px;" src="/assets/images/Logotipo.svg" alt="">
     <div class="link-icons col row align-items-start" style="margin: 10.5px; font-size: 25px;">
         <a href="/home" class="text-decoration-none text-dark mb-4">
-            <i class="bi bi-house-door mb-4"> Home</i>
+            <p class="bi bi-house-door mb-4"> Home</p>
         </a>
         <a href="/perfil" class="text-decoration-none text-dark mb-4">
-            <i class="bi bi-person mb-4"> Perfil</i>
+            <p class="bi bi-person mb-4"> Perfil</p>
         </a>
         <a href="/quiz" class="text-decoration-none text-dark mb-4">
-            <i class="bi bi-pencil mb-4"> Quiz</i>
+            <p class="bi bi-pencil mb-4"> Quiz</p>
         </a>
         <a href="/progresso" class="text-decoration-none text-dark mb-4">
-            <i class="bi bi-bar-chart mb-4"> Progresso</i>
+            <p class="bi bi-bar-chart mb-4"> Progresso</p>
         </a>
         <a href="/forum" class="text-decoration-none text-dark mb-4">
-            <i class="bi bi-people mb-4"> Fórum</i>
+            <p class="bi bi-people mb-4"> Fórum</p>
         </a>
         <a href="/ajuda" class="text-decoration-none text-dark mb-4">
-            <i class="bi bi-question-circle mb-4"> Ajuda</i>
+            <p class="bi bi-question-circle mb-4"> Ajuda</p>
         </a>
     </div>
 </div>
