--- a/Klapp_Angular/src/app/side-menu/side-menu.component.scss
+++ b/Klapp_Angular/src/app/side-menu/side-menu.component.scss
@@ -4,3 +4,8 @@
     backdrop-filter: blur(10px); /* Aplica o desfoque */
     -webkit-backdrop-filter: blur(10px); /* Compatibilidade com navegadores WebKit */
 }
+
+.link-icons a {
+    color: white !important;
+    font-family: "Poppins", sans-serif;
+}
