--- a/Klapp_Angular/src/app/banner-top/banner-top.component.html
+++ b/Klapp_Angular/src/app/banner-top/banner-top.component.html
@@ -1,22 +1,28 @@
-<div class="container">
-<ngb-carousel class=" container-fluid justify-content-center align-items-center " style="width: 100%;">
-    <ng-template ngbSlide>
-        <div class="carousel-caption">
-            <h3>Primeira frase</h3>
-            <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+<div class="banner-top-container">
+<div class="container banner-border border border-2 p-0 container-fluid justify-content-center align-items-center" style="border-radius: 8px;" >
+    <ngb-carousel class="container-fluid justify-content-center align-items-center" style="width: 55vw; height: 14vh;">
+      <ng-template ngbSlide>
+        <div class="carousel-caption p-0" style="width: 55vw; height: 14vh;">
+          <h3>Primeira frase</h3>
+          <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
         </div>
-    </ng-template>
-    <ng-template ngbSlide>
-        <div class="carousel-caption">
-            <h3>Segunda frase</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      </ng-template>
+      <ng-template ngbSlide>
+        <div class="carousel-caption p-0" style="width: 55vw; height: 14vh;">
+          <p> oi galera
+          
+          </p>
         </div>
-    </ng-template>
-    <ng-template ngbSlide>
-        <div class="carousel-caption">
-            <h3>Terceira frase</h3>
-            <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+      </ng-template>
+      <ng-template ngbSlide>
+        <div class="carousel-caption p-0" style="width: 55vw; height: 14vh;">
+          <h3>Terceira frase</h3>
+          <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
         </div>
-    </ng-template>
-</ngb-carousel>
+      </ng-template>
+    </ngb-carousel>
+  </div>
 </div>
+  
+  
+  
