--- a/Klapp_Angular/src/app/side-menu/side-menu.component.html
+++ b/Klapp_Angular/src/app/side-menu/side-menu.component.html
@@ -1,5 +1,5 @@
 
-<div class="col align-items-start border border-2 blurred-background " style="margin: 0 0 0 20px; width: 250px; height: 95vh; border-radius: 8px;">
+<div class="col align-items-start border border-2 blurred-background " style="margin: 0 0 0 20px; height: 95vh; border-radius: 8px;">
     <img style="max-height: 70px; margin: 20px 20px 50px;" src="/assets/images/Logotipo.svg" alt="">
     <div class="link-icons col row align-items-start" style="margin: 10.5px; font-size: 25px;">
         <a href="/home" class="text-decoration-none text-dark mb-4">
