--- a/Klapp_Angular/src/app/banner-top/banner-top.component.html
+++ b/Klapp_Angular/src/app/banner-top/banner-top.component.html
@@ -1,23 +1,21 @@
 <div class="banner-top-container">
-<div class="container banner-border border border-2 p-0 container-fluid justify-content-center align-items-center" style="border-radius: 8px;" >
-    <ngb-carousel class="container-fluid justify-content-center align-items-center" style="width: 55vw; height: 14vh;">
+<div class="container banner-border border border-2 p-0" style="border-radius: 8px;" >
+    <ngb-carousel class="container-fluid">
       <ng-template ngbSlide>
-        <div class="carousel-caption p-0" style="width: 55vw; height: 14vh;">
-          <h3>Primeira frase</h3>
-          <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+        <div class="carousel-caption" style="width: 55vw; height: 14vh;">
+          <p><i class="bi bi-calendar2-check"></i> O QUIZ de Arquitetura de Computadores já está disponível</p>
         </div>
       </ng-template>
       <ng-template ngbSlide>
-        <div class="carousel-caption p-0" style="width: 55vw; height: 14vh;">
-          <p> oi galera
+        <div class="carousel-caption" style="width: 55vw; height: 14vh;">
+          <p><i class="bi bi-stopwatch"></i> O prazo para o QUIZ de Construção de Algoritimos está acabando
+                </p>
+        </div>
+      </ng-template>
+      <ng-template ngbSlide>
+        <div class="carousel-caption m-0 p-0" style="width: 55vw; height: 14vh;">
+         <p><i class="bi bi-exclamation-circle"></i> Não se esqueça de realizar os quizes pendentes! Bons Estudos</p>
           
-          </p>
-        </div>
-      </ng-template>
-      <ng-template ngbSlide>
-        <div class="carousel-caption p-0" style="width: 55vw; height: 14vh;">
-          <h3>Terceira frase</h3>
-          <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
         </div>
       </ng-template>
     </ngb-carousel>
