--- a/Klapp_Angular/src/app/ranking/ranking.component.html
+++ b/Klapp_Angular/src/app/ranking/ranking.component.html
@@ -1,30 +1,31 @@
-<div class="container banner-border border border-2 p-0 container-fluid m-0 " style="border-radius: 8px; width: 55vw; height: 78vh; margin: 0; padding: 0;">
-    <p class="text mb-0">Você está em <span class="mb-0">7º</span> lugar</p>
+<div class="container banner-border border border-2 p-0 container-fluid m-0 "
+    style="border-radius: 8px; width: 55vw; height: 78vh; margin: 0; padding: 0;">
+    <p class="text m-0">Você está em <span class="mb-0">7º</span> lugar</p>
 
-    
-        <div class="row justify-content-center g-5 m-0 justify-content-end p-0">
-            <div class="col-md-3 text-center">
-                <img src="/assets/images/monster01.svg" alt="Imagem Acima" class="img-fluid">
-                <div class="box second d-flex justify-content-center align-items-center flex-column">
-                    <img src="/assets/images/second.svg" alt="" class="mb-2 m-2">
-                    <p>Jorge <br> Carvalho</p>
-                </div>
-            </div>
-            <div class="col-md-3 text-center">
-                <img src="/assets/images/monster02.svg" alt="Imagem Acima" class="img-fluid">
-                <div class="box first d-flex justify-content-center align-items-center flex-column">
-                    <img src="/assets/images/first.svg" alt="" class="mb-2 m-2">
-                    <p>Fernanda <br> Martin</p>
-                </div>
-            </div>
-            <div class="col-md-3 text-center">
-                <img src="/assets/images/monster03.svg" alt="Imagem Acima" class="img-fluid">
-                <div class="box third d-flex justify-content-center align-items-center flex-column">
-                    <img src="/assets/images/third.svg" alt="" class="mb-2 m-2">
-                    <p>Igor <br> Ferreira</p>
-                </div>
+
+    <div class="row justify-content-center g-2 m-0 mt-md-3 justify-content-end p-0">
+        <div class="col-md-3 text-center">
+            <img src="/assets/images/monster03.svg" alt="Imagem Acima" class="img-fluid">
+            <div class="box second d-flex justify-content-center align-items-center flex-column">
+                <img src="/assets/images/second.svg" alt="" class="mb-2 m-2">
+                <p>Jorge <br> Carvalho</p>
             </div>
         </div>
-  
-    
+        <div class="col-md-3 text-center">
+            <img src="/assets/images/monster02.svg" alt="Imagem Acima" class="img-fluid">
+            <div class="box first d-flex justify-content-center align-items-center flex-column">
+                <img src="/assets/images/first.svg" alt="" class="mb-5 m-2">
+                <p>Fernanda <br> Martin</p>
+            </div>
+        </div>
+        <div class="col-md-3 text-center">
+            <img src="/assets/images/monster01.svg" alt="Imagem Acima" class="img-fluid">
+            <div class="box third d-flex justify-content-center align-items-center flex-column">
+                <img src="/assets/images/third.svg" alt="" class="mb-2 m-2">
+                <p>Igor <br> Ferreira</p>
+            </div>
+        </div>
+    </div>
+
+
 </div>
