--- a/Klapp_Angular/src/app/ranking/ranking.component.scss
+++ b/Klapp_Angular/src/app/ranking/ranking.component.scss
@@ -6,8 +6,8 @@
   }
 
   .text{
-    margin-top: 30px;
-    font-size: 44px;
+    
+    font-size: 30px;
     font-weight: 600;
     color: white;
     font-family: "Poppins", sans-serif;
@@ -19,6 +19,7 @@
   }
 
   .podio {
+    margin: 0;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
@@ -45,7 +46,7 @@
     text-align: center;
     font-family: "Poppins", sans-serif;
     color: #FFF;
-    font-size: 24px;
+    font-size: 20px;
   }
 
   .first{
@@ -60,7 +61,7 @@
 
   .third{
    
-    height: 200px;
+    height: 150px;
   }
   .col-md-3{
     margin: 0;
