--- a/Klapp_Angular/src/app/banner-top/banner-top.component.html
+++ b/Klapp_Angular/src/app/banner-top/banner-top.component.html
@@ -1,26 +1,23 @@
-<div class="banner-top-container">
-<div class="container banner-border border border-2 p-0" style="border-radius: 8px;" >
-    <ngb-carousel class="container-fluid">
+  <div class="banner-border border border-2" style="border-radius: 8px; width: 674px; height: 99px;">
+
+    <ngb-carousel>
       <ng-template ngbSlide>
-        <div class="carousel-caption" style="width: 55vw; height: 14vh;">
+        <div class="carousel-caption">
           <p><i class="bi bi-calendar2-check"></i> O QUIZ de Arquitetura de Computadores já está disponível</p>
         </div>
       </ng-template>
       <ng-template ngbSlide>
-        <div class="carousel-caption" style="width: 55vw; height: 14vh;">
+        <div class="carousel-caption">
           <p><i class="bi bi-stopwatch"></i> O prazo para o QUIZ de Construção de Algoritimos está acabando
-                </p>
+          </p>
         </div>
       </ng-template>
       <ng-template ngbSlide>
-        <div class="carousel-caption m-0 p-0" style="width: 55vw; height: 14vh;">
-         <p><i class="bi bi-exclamation-circle"></i> Não se esqueça de realizar os quizes pendentes! Bons Estudos</p>
-          
+        <div class="carousel-caption">
+          <p><i class="bi bi-exclamation-circle"></i> Não se esqueça de realizar os quizes pendentes! Bons Estudos</p>
+
         </div>
       </ng-template>
     </ngb-carousel>
+
   </div>
-</div>
-  
-  
-  
