--- a/Klapp_Angular/src/app/ranking/ranking.component.html
+++ b/Klapp_Angular/src/app/ranking/ranking.component.html
@@ -1,5 +1,5 @@
-<div class="container banner-border border border-2 p-0 container-fluid m-0 "
-    style="border-radius: 8px; width: 55vw; height: 78vh; margin: 0; padding: 0;">
+<div class="container banner-border border border-2 m-2 "
+    style="border-radius: 8px; width: 674px; height: 660px;">
     <p class="text m-0">Você está em <span class="mb-0">7º</span> lugar</p>
 
 
