--- a/Klapp_Angular/src/app/banner-top/banner-top.component.scss
+++ b/Klapp_Angular/src/app/banner-top/banner-top.component.scss
@@ -1,10 +1,4 @@
-* {
-  padding: 0;
-  margin: 0;
-}
-
 .banner-border {
-  padding: 10px;
   background: rgba(255, 255, 255, 0.3); /* Fundo semitransparente */
   backdrop-filter: blur(10px); /* Aplica o desfoque */
   -webkit-backdrop-filter: blur(10px); /* Compatibilidade com navegadores WebKit */
@@ -14,10 +8,8 @@
   visibility: visible !important; /* Garante que o conteúdo seja visível */
   opacity: 1 !important; /* Garante que o conteúdo seja opaco */
   position: relative;
-  margin: 0 auto;
-  padding: 0;
-  width: 100%; /* Ocupa toda a largura disponível */
-  height: 100%; /* Ocupa toda a altura disponível */
+ 
+
   display: flex;
   align-items: center;
   justify-content: center;
@@ -29,6 +21,11 @@
   font-weight: 700;
   font-family: "Poppins", sans-serif;
   font-size: 18px;
-  margin: 0;
-  margin-right: 25%;
+  margin-top: 45px;
+ 
+}
+
+.carousel-control-prev{
+  margin: 0 !important;
+  padding: 0 !important;
 }
