--- a/Klapp_Angular/src/app/logout-image/logout-image.component.html
+++ b/Klapp_Angular/src/app/logout-image/logout-image.component.html
@@ -1,3 +1,3 @@
-<div class="container banner-border border border-2 p-0" style="border-radius: 8px; width: 18vw; height: 14vh ; margin-left: 10px;">
+<div class="container banner-border border border-2" style="border-radius: 8px; width: 323px; height: 99px;">
  
 </div>
