--- a/Klapp_Angular/src/app/ranking/ranking.component.scss
+++ b/Klapp_Angular/src/app/ranking/ranking.component.scss
@@ -1,68 +1,73 @@
 .banner-border {
-    padding: 10px;
-    background: rgba(255, 255, 255, 0.3); /* Fundo semitransparente */
-    backdrop-filter: blur(10px); /* Aplica o desfoque */
-    -webkit-backdrop-filter: blur(10px); /* Compatibilidade com navegadores WebKit */
-  }
+  padding: 10px;
+  background: rgba(255, 255, 255, 0.3);
+  /* Fundo semitransparente */
+  backdrop-filter: blur(10px);
+  /* Aplica o desfoque */
+  -webkit-backdrop-filter: blur(10px);
+  /* Compatibilidade com navegadores WebKit */
+}
 
-  .text{
-    
-    font-size: 30px;
-    font-weight: 600;
-    color: white;
-    font-family: "Poppins", sans-serif;
-  }
+.text {
+  font-size: 30px;
+  font-weight: 600;
+  color: white;
+  font-family: "Poppins", sans-serif;
+}
 
-  span{
-    color: #191D6B;
-    font-family: "Poppins", sans-serif;
-  }
+span {
+  color: #191D6B;
+  font-family: "Poppins", sans-serif;
+}
 
-  .podio {
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    height: 100%;
-  }
-  
-  .row {
-    margin-top: auto;
-    display: flex;
-    align-items: end; /* Alinha os itens no final */
-  }
-  
-  .box {
-    height: 100%; /* Ajusta a altura das caixas */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #474A89;
-    border-radius: 8px;
-  }
-   
+.podio {
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  height: 100%;
+}
 
-  p{
-    text-align: center;
-    font-family: "Poppins", sans-serif;
-    color: #FFF;
-    font-size: 20px;
-  }
+.row {
+  margin-top: auto;
+  display: flex;
+  align-items: end;
+  /* Alinha os itens no final */
+}
 
-  .first{
-    
-    height: 300px;
-  }
+.box {
+  height: 100%;
+  /* Ajusta a altura das caixas */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #474A89;
+  border-radius: 8px;
+}
 
-  .second{
-   
-    height: 250x;
-  }
 
-  .third{
-   
-    height: 150px;
-  }
-  .col-md-3{
-    margin: 0;
-  }
+p {
+  text-align: center;
+  font-family: "Poppins", sans-serif;
+  color: #FFF;
+  font-size: 20px;
+}
+
+.first {
+
+  height: 300px;
+}
+
+.second {
+
+  height: 250x;
+}
+
+.third {
+
+  height: 150px;
+}
+
+.col-md-3 {
+  margin: 0;
+}
