--- a/Klapp_Angular/src/app/tela-aluno/tela-aluno.component.scss
+++ b/Klapp_Angular/src/app/tela-aluno/tela-aluno.component.scss
@@ -4,41 +4,7 @@
     background-repeat: no-repeat; /* Evita que a imagem se repita */
     background-position: center; /* Centraliza a imagem no elemento */
     width: 100%; /* Largura total da tela */
-    height: 104vh; /* Altura total da tela */
+    height: 851px; /* Altura total da tela */
+    align-items: center; /* Centraliza os itens horizontalmente, se necessário */
 }
 
-.tela-aluno-container {
-  display: flex;
-  height: 100vh; /* Ocupa a altura total da tela */
-}
-
-/* Estilos para o side-menu */
-.side-menu {
-  display: flex;
-  height: 100vh; /* Garante que ocupe a altura total da tela */
-}
-
-.banner-top-container {
-  flex-grow: 1;
-  display: flex;
-  flex-direction: column; /* Alterado para coluna */
-  align-items: flex-start; /* Alinhamento dos itens ao topo */
-}
-
-.banner-top {
-  margin-bottom: 5px; /* Espaço abaixo do banner-top */
-}
-
-.ranking-container {
-  display: flex;
-  align-items: center; /* Centraliza horizontalmente */
-  width: 100%; /* Certifique-se que ocupa a largura total */
-  
-}
-
-/* Adicionando espaço entre o side-menu e o banner-top */
-.tela-aluno-container {
-  display: flex;
-  height: 100vh; /* Ocupa a altura total da tela */
-  
-}
